Webchat iframe added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 			<div class="row aln-center">
 				<div class="col-6 col-6-medium col-12-small">
 					<section class="box style1">
-						<!-- paste code from the webchat page in azure -->
+						<iframe
+						<iframe src='https://webchat.botframework.com/embed/contoso-dentist-chat-bot?s=Jvg0Ys66_Fw.0J1vPAcTUWBP46PABxz6Gsq93chAo5ACR5nAeIFrwIg'  
+						style='min-width: 400px; width: 100%; min-height: 500px;'
+						></iframe>						
 					</section>
 				</div>
 			</div>
